[tool.poetry]
name = "traccarjson2gpx"
version = "0.1.0"
description = "A tool to convert JSON traces from Traccar to GPX"
authors = ["Vasek Sraier <git@vakabus.cz>"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
